# reverser

./: .envrc  .gitignore  CAPABILITY_ROADMAP.md  README.md  devenv.nix  harness.toml  pyproject.toml
.github/workflows/: build.yml  release.yml
cracks/69c53f51f2d49d8512f64b7a/: CrackMe.md
cracks/AdversarialMind/: AdversarialMind.md
cracks/Almost/: almost
cracks/boring/: README.md  boring
cracks/httpd_handout/: README.md
desktop/: .gitignore  electron-builder.yml  package-lock.json  package.json  playwright.config.ts  reverser-service.spec  reverser_service_entry.py  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts
desktop/electron/: ipc.ts  main.ts  preload.ts  python.ts
desktop/patches/: app-builder-lib+25.1.8.patch
desktop/renderer/: index.html
docs/: AUDIT_GAP_ANALYSIS.md  CAPABILITY_ROADMAP.md  release-checklist.md
incus/: build-image.sh  profile.yaml  re-tools.nix  setup-firewall.sh
scripts/: build-desktop.sh  build-python.sh  fetch-tools.sh  sync-version.mjs  tool-versions.toml
src/reverser/: cli.py  (+14 more)
tests/: conftest.py  test_adversary.py  test_agent_session_callbacks.py  test_agent_session_events.py  test_agent_session_import.py  test_agent_session_target_kind.py  test_agent_session_turn_remap.py  test_backend_factory.py  test_backend_retry.py  test_backends_allowlist.py  test_bloodhound_collect.py  test_bloodhound_lifecycle.py  test_bloodhound_query.py  test_bloodhound_smoke.py  test_claude_backend_resilience.py  test_cli.py  test_cli_sessions.py  test_conn_breaker.py  test_dispatch.py  test_dispatch_event_callback.py  test_dispatch_helpers.py  test_dispatch_in_flight.py  test_dispatch_reconcile.py  test_dispatch_watchdog.py  test_emergency_snapshot.py  test_hypothesis_validation_gate.py  test_kb_authz.py  test_kb_hypotheses.py  test_kb_integration.py  test_kb_parsers.py  test_kb_remap.py  test_kb_schema.py  test_kb_scope.py  test_kb_store.py  test_kb_tools.py  test_manager_discipline.py  test_metasploit_helpers.py  test_metasploit_lifecycle.py  test_metasploit_operations.py  test_msfvenom.py  (+39 more)
(+297 files in other folders)
