[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reverser"
version = "0.1.0"
description = "Claude-powered reverse engineering agent"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "boto3",
    "click",
    "textual>=1.0.0",
    "openai>=1.0.0",
]

[project.scripts]
reverser = "reverser.cli:main"
reverser-harness = "reverser.harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["src"]
